--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false  # don't stop other jobs
       matrix:
-        branch: [ master ]
+        branch: [ ${{ GITHUB_REF }} ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         c_compiler: [ gcc, clang, cl ]
         include:
@@ -105,11 +105,20 @@ jobs:
         run: |
           cd build 
           cmake --build . --target ${{ runner.os == 'Windows' && 'RUN_TESTS' || 'test' }}
+        if: runner.os != 'Windows'
 
       - name: mtest 
         run: |
           PATH=$HOME/MDB/bin:$PATH $HOME/MDB/bin/Mtest.py -r --debug=0 --ci --no-html --TSTTRGBASE=.
         if: runner.os != 'Windows'
+
+      - name: ctest 
+        shell: pwsh
+        run: |
+          $env:PATH = 'C:\vcpkg\installed\x64-windows\bin;C:\vcpkg\installed\x64-windows\debug\bin;' + $env:PATH
+          cd build 
+          cmake --build . --target ${{ runner.os == 'Windows' && 'RUN_TESTS' || 'test' }}
+        if: runner.os == 'Windows'
 
       - name: mtest 
         shell: pwsh
