--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -16,7 +16,6 @@ jobs:
     strategy:
       fail-fast: false  # don't stop other jobs
       matrix:
-        branch: [ ${{ GITHUB_REF }} ]
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         c_compiler: [ gcc, clang, cl ]
         include:
@@ -46,7 +45,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ matrix.branch }}
+          ref: ${{ github.ref }}
 
       - name: install pymonetdb cryptography
         run: pip3 install pymonetdb cryptography
@@ -132,5 +131,5 @@ jobs:
       - name: Publish mtest results
         uses: actions/upload-artifact@v3
         with:
-          name: mtest-${{ matrix.branch }}-${{ matrix.os }}-${{ matrix.c_compiler }}
+          name: mtest-${{ github.ref }}-${{ matrix.os }}-${{ matrix.c_compiler }}
           path: mtests.tar
