Round floating point numbers inside GEOM output.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -143,6 +143,7 @@ if(PYTHON3_LIBDIR)
     sqllogictest.py
     explain.py
     plan.py
+    floatutil.py
     mapicursor.py
     malmapi.py
     helpers.py
