c template hack for GDKanalytical{min,max} working

--- a/gdk/CMakeLists.txt
+++ b/gdk/CMakeLists.txt
@@ -85,7 +85,7 @@ target_sources(bat
   gdk_subquery.c gdk_subquery.h
   gdk_analytic_bounds.c
   gdk_analytic_statistics.c
-  gdk_analytic_func.c
+  gdk_analytic_func.c gdk_analytic_func.h
   gdk_analytic.h
   gdk_tracer.c gdk_tracer.h
   gdk_rtree.c
