Don't just convert / but also \ into \\ for proper quoting in strings. Needed to run Mtest.py with Python 3.12.

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -21,7 +21,7 @@ set(QXinfodir "${CMAKE_INSTALL_INFODIR}")
 set(QXlibdir "${CMAKE_INSTALL_FULL_LIBDIR}")
 set(QXlibexecdir "${CMAKE_INSTALL_LIBEXECDIR}")
 if (WIN32)
-  string(REPLACE "/" "\\\\" QXlocalstatedir "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}")
+  string(REGEX REPLACE "[/\\]" "\\\\\\\\" QXlocalstatedir "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}")
 else()
   set(QXlocalstatedir "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}")
 endif()
@@ -29,7 +29,7 @@ set(QXmandir "${CMAKE_INSTALL_MANDIR}")
 set(QXprefix "${CMAKE_INSTALL_PREFIX}")
 set(QXPYTHON "${Python3_EXECUTABLE}")
 if (WIN32)
-  string(REPLACE "/" "\\\\" QXPYTHON_LIBDIR "${PYTHON3_LIBDIR}")
+  string(REGEX REPLACE "[/\\]" "\\\\\\\\" QXPYTHON_LIBDIR "${PYTHON3_LIBDIR}")
 else()
   set(QXPYTHON_LIBDIR "${PYTHON3_LIBDIR}")
 endif()
