--- a/sql/backends/monet5/vaults/csv/CMakeLists.txt
+++ b/sql/backends/monet5/vaults/csv/CMakeLists.txt
@@ -1,5 +1,8 @@
-
-add_library(csv MODULE)
+if(MONETDB_STATIC)
+  add_library(csv STATIC)
+else()
+  add_library(csv MODULE)
+endif()
 
 target_sources(csv
     PRIVATE
