--- a/sql/server/CMakeLists.txt
+++ b/sql/server/CMakeLists.txt
@@ -121,7 +121,23 @@ target_compile_definitions(sqlserver
   PRIVATE
   LIBSQL)
 
+if(NOT DEFINED MONETDB_STATIC)
 set_target_properties(sqlserver
   PROPERTIES
   POSITION_INDEPENDENT_CODE ON
   PUBLIC_HEADER "${sqlserver_public_headers}")
+endif()
+
+if(MONETDB_STATIC)
+install(TARGETS
+  sqlserver
+  RUNTIME
+  DESTINATION ${CMAKE_INSTALL_BINDIR}
+  LIBRARY
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  PUBLIC_HEADER
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/monetdb
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+endif()
