--- a/monetdb5/extras/mal_optimizer_template/CMakeLists.txt
+++ b/monetdb5/extras/mal_optimizer_template/CMakeLists.txt
@@ -8,7 +8,11 @@
 # Copyright 1997 - July 2008 CWI, August 2008 - 2023 MonetDB B.V.
 #]]
 
-add_library(opt_sql_append MODULE)
+if(MONETDB_STATIC)
+  add_library(opt_sql_append STATIC)
+else()
+  add_library(opt_sql_append MODULE)
+endif()
 
 target_sources(opt_sql_append
   PRIVATE
