--- a/sql/storage/bat/CMakeLists.txt
+++ b/sql/storage/bat/CMakeLists.txt
@@ -41,9 +41,18 @@ target_link_libraries(batstore
   sqlinclude
   sqlstorage)
 
+if(NOT DEFINED MONETDB_STATIC)
 set_target_properties(batstore
   PROPERTIES
   POSITION_INDEPENDENT_CODE ON)
+endif()
+
+if(MONETDB_STATIC)
+install(TARGETS
+  batstore
+  ARCHIVE
+  DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
 
 target_compile_definitions(batstore
   PRIVATE
