--- a/clients/odbc/driver/driver.rc
+++ b/clients/odbc/driver/driver.rc
@@ -19,7 +19,7 @@ BEGIN
     BLOCK "040904b0"	// US-English; Unicode
     BEGIN
       VALUE "Comments", "\0"
-      VALUE "CompanyName", "MonetDB B.V.\0"
+      VALUE "CompanyName", "MonetDB Foundation\0"
       VALUE "FileDescription", "MonetDB ODBC Driver DLL\0"
       VALUE "FileVersion", sversion(11,49,2)
       VALUE "InternalName", "MonetODBC\0"
