--- a/debian/control
+++ b/debian/control
@@ -5,14 +5,14 @@ Maintainer: MonetDB Foundation <info@monetdb.org>
 Homepage: https://www.monetdb.org/
 Vcs-Browser: https://dev.monetdb.org/hg/MonetDB/
 Vcs-Hg: https://dev.monetdb.org/hg/MonetDB/ -b Dec2023
-Build-Depends: debhelper (>= 12), cmake (>= 3.12), bison,
+Build-Depends: debhelper-compat (= 12), cmake (>= 3.12), bison,
  libbz2-dev, libcurl4-gnutls-dev, libgeos-dev (>= 3.10.0),
  libpcre3-dev, libreadline-dev, liblzma-dev, liblz4-dev (>= 1.8.0),
  libxml2-dev, pkg-config,
  python3, python3-dev, python3-numpy,
  unixodbc-dev, zlib1g-dev, r-base-dev,
  libcfitsio-dev, libssl-dev (>= 1.1.1)
-Standards-Version: 3.8.0
+Standards-Version: 4.6.2
 
 Package: libmonetdb28
 Architecture: any
