We can run TPC-DS on 32 bit if we skip one test.

--- a/sql/benchmarks/tpcds/Tests/one.test.in
+++ b/sql/benchmarks/tpcds/Tests/one.test.in
@@ -5973,6 +5973,7 @@ limit 100
 ----
 600 values hashing to f1cce2608f5e93697e23da9b25217519
 
+skipif bits=32bit
 query ITRRRR rowsort
 -- query 51a
 WITH web_tv as (
