--- a/monetdb_config.h.in
+++ b/monetdb_config.h.in
@@ -172,6 +172,7 @@
 #cmakedefine HAVE_TIMES 1
 #cmakedefine HAVE_TM_GMTOFF 1
 #cmakedefine HAVE_UNAME 1
+#cmakedefine HAVE_WCWIDTH 1
 // #cmakedefine HAVE_SEMTIMEDOP
 #cmakedefine HAVE_PTHREAD_KILL 1
 #cmakedefine HAVE_PTHREAD_SETNAME_NP 1
