Remove CURL from the stream library (and hence mserver5), but keep in mclient. The server didn't use CURL but carried it along (with a ton of supporting libraries).  Support has now been moved directly into mclient (and streamcat, the test program).  Instead of a url stream, they now use a buffer stream, but in either case, the data was copied completely before getting processed.

--- a/clients/examples/C/CMakeLists.txt
+++ b/clients/examples/C/CMakeLists.txt
@@ -46,7 +46,8 @@ add_executable(streamcat
 target_link_libraries(streamcat
   PRIVATE
   monetdb_config_header
-  stream)
+  stream
+  $<$<BOOL:${CURL_FOUND}>:CURL::libcurl>)
 
 add_executable(testcondvar
   testcondvar.c)
